Mobile view is fixed.
Changed font size primary to vw, instead of vh
Added new pictures

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 		<!-- Date and Image  -->
 
 		<div class="image-block">
-			<img class="main-image" src="assets/img/onodera4.jpg" alt="" />
-			<img class="main-image" src="assets/img/onodera2.jpg" alt="" />
+			<img class="main-image" src="assets/img/pic1.JPG" alt="" />
+			<img class="main-image" src="assets/img/pic2.JPG" alt="" />
 		</div>
 
 		<div class="linksBlock" id="linksBlock">
